# racecar

./: README.md
racecar_control/config/: racecar_control.yaml
racecar_control/scripts/: keyboard_teleop.py  servo_commands.py
racecar_description/meshes/: levine_track.dae
racecar_description/models/MIT_Tunnel/: model.config  model.sdf
racecar_description/models/barca_track/: model.config  model.sdf
racecar_description/models/levine_track/: model.config  model.sdf
racecar_description/models/my_ground_plane/: model.sdf
racecar_description/models/my_ground_plane/materials/scripts/: my_ground_plane.material
racecar_description/models/porto_track/: model.config  model.sdf
racecar_description/models/runway/: model.config  model.sdf
racecar_description/urdf/: macros.xacro  racecar.gazebo  racecar.xacro
racecar_gazebo/: CMakeLists.txt  package.xml
racecar_gazebo/config/: costmap_common_params.yaml  global_costmap_params.yaml  gmapping.rviz  keyboard_teleop.yaml  local_costmap_params.yaml  new_gmapping.rviz  racecar_rviz.rviz  teb_local_planner_params.yaml
racecar_gazebo/launch/: gmapping.launch  racecar.launch  racecar_normal_light_runway.launch  racecar_normal_runway.launch  racecar_runway.launch  racecar_runway_navigation.launch  racecar_rviz.launch  racecar_tunnel.launch  slam_gmapping.launch
racecar_gazebo/map/: map_runway.pgm  map_runway.yaml  map_tunnel.yaml
racecar_gazebo/model/green_light/: model.config  model.sdf
racecar_gazebo/model/green_light/materials/scripts/: my_ground_plane.material
racecar_gazebo/model/my_ground_plane/: model.config
racecar_gazebo/model/my_ground_plane/materials/scripts/: my_ground_plane.material
racecar_gazebo/model/red_light/: model.config  model.sdf
racecar_gazebo/model/red_light/materials/scripts/: my_ground_plane.material
racecar_gazebo/scripts/: findLine.py  gazebo_odometry.py  global_hybrid_A_star.py  keyboard_teleop.py  light_contrl.py  path_pursuit.py
racecar_gazebo/src/: findLine.cpp
racecar_gazebo/worlds/: normal_runway.world  normal_runway_with_light.world  racecar_runway.world  racecar_tunnel.world  track_barca.world  track_empty.world  track_levine.world  track_porto.world
system/ackermann_msgs/: CHANGELOG.rst  CMakeLists.txt  README.rst  mainpage.dox  package.xml
system/hokuyo_node/: CHANGELOG.rst  CMakeLists.txt  hokuyo_test.launch  hokuyo_test_intensity.launch  package.xml
system/hokuyo_node/cfg/: Hokuyo.cfg
system/hokuyo_node/include/hokuyo_node/: hokuyo.h
system/hokuyo_node/src/: CMakeLists.txt  getFirmwareVersion.cpp  getID.cpp  hokuyo.cpp  hokuyo_node.cpp  timestamp_test.cpp
system/hokuyo_node/test/: TODO  unplug_test.launch
system/racecar/racecar/config/racecar-v2/: joy_teleop.yaml  sensors.yaml  vesc.yaml  vesc_new.yaml
system/racecar/racecar/launch/includes/common/: sensors.launch.xml
system/racecar/racecar/maps/: 32380.yaml
system/vesc/vesc_pid_configs/: focbox_ese680_untuned.xml
system/waypoint_logger/scripts/: waypoint_logger.py
