<package>
  <name>ackermann_msgs</name>
  <version>1.0.1</version>
  <description>
    ROS messages for robots using Ackermann steering.
  </description>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <author>Jack O'Quin</author>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ackermann_msgs</url>
  <url type="repository">https://github.com/ros-drivers/ackermann_msgs.git</url>
  <url type="bugtracker">https://github.com/ros-drivers/ackermann_msgs/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <export>
    <architecture_independent/>
  </export>
</package>
